@@ -3,6 +3,7 @@
                               KijiMR Release Notes
 
 Version 1.0.0-rc61
+  * KIJIMR-166. Add HBase jars to MapReduce task classpath.
   * KIJIMR-167. Print better status messages indicating whether jobs succeed
       or fail.
   * KIJIMR-64. Serialize row filters & start/limit row keys for MapReduce jobs.
